codex-exp: iteration 5