@@ -1,5 +1,3 @@
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public final class StronglyConnectedComponentsResult {
@@ -17,21 +15,6 @@ public final class StronglyConnectedComponentsResult {
         return components.size();
     }
 
-    public String toDisplayString() {
-        StringBuilder output = new StringBuilder("Strongly Connected Components:\n");
-
-        for (StronglyConnectedComponent component : components) {
-            output.append(component.toDisplayString()).append('\n');
-        }
-
-        return output.toString();
-    }
-
-    @Override
-    public String toString() {
-        return toDisplayString();
-    }
-
     private static List<StronglyConnectedComponent> freezeComponents(
         List<StronglyConnectedComponent> components
     ) {
@@ -39,14 +22,12 @@ public final class StronglyConnectedComponentsResult {
             throw new IllegalArgumentException("Components must not be null.");
         }
 
-        List<StronglyConnectedComponent> immutableComponents = new ArrayList<>(components.size());
         for (StronglyConnectedComponent component : components) {
             if (component == null) {
                 throw new IllegalArgumentException("Components must not contain null values.");
             }
-            immutableComponents.add(component);
         }
 
-        return Collections.unmodifiableList(immutableComponents);
+        return List.copyOf(components);
     }
 }
